[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/fixed_canon.gd" type="Script" id=1]
[ext_resource path="res://sprites/fixed_cannon_holder.png" type="Texture" id=2]
[ext_resource path="res://sprites/fixed_cannon_head.png" type="Texture" id=3]
[ext_resource path="res://sprites/nozzel.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 25.2841

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 19.6426, 20.2896 )

[node name="fixed_canon" type="Node2D"]
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="body" type="Area2D" parent="."]
position = Vector2( 28.8882, 72.2719 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "shape" ]

[node name="fixed_cannon_holder" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility", "texture" ]

[node name="head_pos" type="Position2D" parent="."]
position = Vector2( 28.8882, 72.2719 )
_sections_unfolded = [ "Transform" ]

[node name="bul_pos" type="Position2D" parent="head_pos"]
editor/display_folded = true
position = Vector2( -36.5193, 0 )
rotation = -1.5708
_sections_unfolded = [ "Transform" ]

[node name="condencer" type="Node" parent="head_pos/bul_pos"]

[node name="fixed_cannon_head" type="Sprite" parent="head_pos"]
position = Vector2( 0.323532, -0.323532 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform", "texture" ]

[node name="nozzel" type="Sprite" parent="head_pos"]
position = Vector2( -20.5193, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="solidBody" type="StaticBody2D" parent="."]
editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="solidBody"]
position = Vector2( 29.034, 20.8264 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="bullet_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="area_entered" from="body" to="." method="_on_body_area_entered"]
